canary-dep/ingress-can-weight.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-webapp
  namespace: webapp-can
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "50"
spec:
  rules:
  - host: webapp.epam  
    http:
      paths:
      - path: /
        backend:
          serviceName: webapp-can
          servicePort: 8080
